fix: adjust sticky positioning and improve scrollbar visibility in filtered view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,16 @@ html::-webkit-scrollbar,
 body::-webkit-scrollbar {
   display: none;
 }
+
+
+/* Hide scrollbar cross-browser */
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hidden {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
